move src code to subfolder

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
+minversion = 3.1
 testpaths = tests
+norecursedirs = _*
 timeout=30
 timeout_method=thread
-addopts = --verbose -rf --cov=hyper_prompt -p no:sugar
+cache_dir = /tmp/.hyper_prompt.pytest.cache
