--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,19 +1,17 @@
 [bumpversion]
 current_version = 1.1.0
+tag_name = {new_version}
 commit = False
 tag = False
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
-serialize = 
-	{major}.{minor}.{patch}-{release}{build}
-	{major}.{minor}.{patch}
-
-[bumpversion:part:build]
 
 [bumpversion:file:hyper_prompt/__init__.py]
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:setup.py]
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:README.md]
 search = version-{current_version}-green.svg
 replace = version-{new_version}-green.svg
-
